20220321/환경변수설정및CMD로package열기.txt
2022-03-21배운것
-------------------------------------------
환경변수설정
내PC ->속성->고급시스템설정->환경변수
시스템변수 -> 새로만들기 ->변수이름= JAVA_HOME-변수값=C:\jdk-11.0.14(java파일경로)
시스템변수 -> PATH 더블클릭->새로만들기->%JAVA_HOME%\bin
시스템변수 -> 새로만들기 ->변수이름= CLASSPATH-변수값=%JAVA_HOME%\lib;.;(lib파일경로)

모든설정후 cmd 새로 열기 해줘야됨(초기화 필수!!!)
---------------------------------------------
cmd
C:\Users\KCCI08>java -version
java version "11.0.14" 2022-01-18 LTS
Java(TM) SE Runtime Environment 18.9 (build 11.0.14+8-LTS-263)
Java HotSpot(TM) 64-Bit Server VM 18.9 (build 11.0.14+8-LTS-263, mixed mode)

C:\Users\KCCI08>javac -version
javac 11.0.14

C:\Users\KCCI08>cd..

C:\Users>cd..

C:\>%JAVA_HOME%   =>echo무조건 붙혀줘야됨
'C:\jdk-11.0.14'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는
배치 파일이 아닙니다.

C:\>echo %JAVA_HOME%
C:\jdk-11.0.14

C:\JavaStudy>mkdir src3

C:\JavaStudy>cd src3

C:\JavaStudy\src3>notepad file.java
package com.test.exam01;

public class file {

	public static void main(String[ ] argv){
			
		System.out.println("안녕");
	
	}
}

C:\JavaStudy\src3>javac file.java
file.java:8: error: unmappable character (0xEC) for encoding x-windows-949
                System.out.println("?븞?뀞");
                                    ^
file.java:8: error: unmappable character (0xEB) for encoding x-windows-949
                System.out.println("?븞?뀞");
                                      ^
2 errors


C:\JavaStudy\src3>javac -encoding UTF-8 file.java

C:\JavaStudy\src3>java file.class
Error: Could not find or load main class file.class
Caused by: java.lang.ClassNotFoundException: file.class

C:\JavaStudy\src3>mkdir com\test\exam01

C:\JavaStudy\src3>copy file.class com\test\exam01
        1개 파일이 복사되었습니다.

C:\JavaStudy\src3>java com/test/exam01/file
안녕